# zeek-osquery

./: .gitmodules  BrokerConnectionManager.cpp  BrokerConnectionManager.h  BrokerQueryManager.cpp  BrokerQueryManager.h  BrokerQueryPlugin.cpp  BrokerQueryPlugin.h  CMakeLists.txt  Doxyfile  Makefile  README.md  README.rst  StateMachine.cpp  StateMachine.h  broker.ini  configure  install_guide.md  main.cpp  osquery_quickstart_ubuntu.md  utility.cpp  utility.h
aux/sql_parser/: keyword.h  lexer.cpp  lexer.h  sql.h  sqlselect.cpp  sqlselect.h  utils.h
bro/: configure.conf  run.sh  test.bro
bro/example/: framework_example1.bro  framework_example2.bro
bro/osquery/: __load__.bro  acpi_table.bro  arp_cache.bro  chrome_extensions.bro  cpuid.bro  crontab.bro  disk_encryption.bro  etc_hosts.bro  example.bro  files.bro  firefox_addons.bro  hardware_events.bro  iptables.bro  kernel_info.bro  kernel_integrity.bro  kernel_modules.bro  last.bro  listening_ports.bro  logged_in_users.bro  main.bro  mounts.bro  os_version.bro  pci_devices.bro  process_envs.bro  process_memory_map.bro  process_open_files.bro  process_open_sockets.bro  processes.bro  rpm_packages.bro  shell_history.bro  smbios_tables.bro  sockets.bro  suid_bin.bro  usb.bro  usb_devices.bro
bro/osquery/logging/: __load__.bro  host_info.bro  user_connections.bro
bro/osquery/logging/tables/: mounts.bro  processes.bro
bro/osquery/utils/: __load__.bro  host_info.bro  host_interfaces.bro
cmake/: FindBro.cmake  FindBroker.cmake  FindGlog.cmake  FindLibcaf.cmake  FindOsquery.cmake  RequireCXX11.cmake  UserChangedWarning.cmake
etc/: bro-osquery.service.in  bro.load.in  broker.ini.in
include/: BrokerManager.h  QueryManager.h  plugins.h  utils.h
install/: README.md  install_ubuntu_16_04.sh  osquery.example.conf  run.sh
install/docker/: Dockerfile  README.md
osquery/: __load__.bro  main.bro
osquery/detection/: __load__.bro  download_execution.bro  host_network.bro  ssh_hopping.bro
osquery/framework/: __load__.bro  bro_backend.bro  bro_backend_backup.bro  framework_commons.bro  hosts_info.bro  hosts_interfaces.bro  osquery_framework.bro  osquery_hosts.bro  osquery_subscriptions.bro
osquery/host_info/: __load__.bro  hosts_interfaces.bro  process_connections.bro  processes.bro  sockets.bro  users.bro
osquery/logging/: __load__.bro  user_connection_events.bro
osquery/logging/tables/: listening_ports.bro  process_events.bro  process_open_sockets.bro  processes.bro  socket_events.bro  users.bro
osquery/utils/: host_info.bro  host_interfaces.bro
osquery_tests/: __load__.bro  correlation.bro  process_connections.bro
src/: BrokerConnectionManager.cpp  BrokerConnectionManager.h  BrokerManager.cpp  BrokerManager.h  BrokerQueryManager.cpp  BrokerQueryManager.h  BrokerQueryPlugin.h  QueryManager.cpp  StateMachine.cpp  StateMachine.h  config.h.in  extension.cpp  logger.cpp  main.cpp  plugins.cpp  utility.cpp  utility.cpp~  utility.h  utils.cpp  utils.h
src/logger/: logger.cpp  logger.h
tests/: test-unsubscribe.bro
